# GameAI-Pathfinder

./: .gitignore  CMakeLists.txt  README.md
experiments/: analyze.py  build_eval_master.py  eval_maps.txt  generate_eval_runs.py  make_latex_table.py  plot_learning_curve.py  plot_q_heatmap.py  plot_success_rate.py  run_all.ps1  run_all_param.ps1  run_grid.ps1  sanitize_table_summary.py  sanitize_table_summary_v2.py  stat_tests.py  summarize_metrics.py  train_maps.txt
maps/: demo_map.txt  map_A.txt  map_B.txt  map_C.txt  map_D.txt
paper/: paper_draft.aux  paper_draft.out  paper_draft.tex  paper_draft.tex.bak  references.bib
results/: eval_runs.csv  metrics.csv  metrics_all.csv  qlearning_train_100.csv  qlearning_train_1000.csv  qlearning_train_2000.csv  qlearning_train_500.csv  qlearning_train_5000.csv  stat_tests.txt  table_summary.csv  table_summary_fixed.csv  table_summary_tex.tex
sections/: introduction.tex
src/: agent.h  astar.cpp  astar.h  grid.cpp  grid.h  main.cpp  main.cpp.bak  qlearning.cpp  qlearning.h
